--- a/railway.toml
+++ b/railway.toml
@@ -2,4 +2,4 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "cd backend && npm install && npm run build && node dist/server.js"
+startCommand = "npm run build && npm start"
